log/build_2025-04-07_07-32-00/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishimu.py", line 28
    run local()
        ^^^^^
SyntaxError: invalid syntax

